--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script type="text/javascript">
+     alert("Lalo Díaz Pérez 4BVPG");   
+    </script>
     <meta charset="UTF-8">
     <title>Bootstrap4 Landing Page</title>
     <!-- BOOTSTRAP CSS -->
